<?xml version="1.0"?>
<package>
  <name>udp</name>
  <version>0.1.0</version>
  <description>The mavros cmd publish package</description>

  <maintainer email="766243708@qq.com">zyw</maintainer>
  <license>BSD</license>
  
  <author email="766243708@qq.com">zyw</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>stdmsg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>message_generation</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>stdmsg</run_depend>
  <run_depend>opencv3</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
